# my_go_player

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  codecov.yml  conftest.py  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docs-ci.yml  python-app.yml
about/: index.html
chapter6/: index.html
chapter7/: index.html
docs/: about.md  chapter6.md  chapter7.md  chapters1-5.md  getting-started.md  index.md
getting-started/: index.html
pr-28/: 404.html  index.html
pr-28/about/: index.html
pr-28/api-reference/: index.html
pr-28/chapter6/: index.html
pr-28/chapter7/: index.html
pr-28/getting-started/: index.html
pr-28/search/: search_index.json
src/dlgo/: __init__.py  board.py  gamestate.py  go_types.py  goboard_fast.py  goboard_slow.py  gostring.py  gotypes.py  move.py  scoring.py  utils.py  visualizer.py  zobrist.py
src/dlgo/agent/: __init__.py  base.py  helpers.py  mcts_agent.py  mcts_node.py  naive.py  random_bot.py
src/dlgo/data/: index_processor.py
src/dlgo/encoders/: base.py  oneplane.py
src/dlgo/gosgf/: sgf.py  sgf_grammar.py  sgf_properties.py
src/examples/: check_for_gpu.py  mcts_go_cnn.py  mcts_go_cnn_simple.py
src/examples/pytorch/: configure_pytorch_gpu.py  mcts_go_cnn_simple.py  mcts_go_mlp.py
src/gobot/: __init__.py  gobot.py
src/misc/: board_utils.py  validate_gpu_config.py
src/scripts/: generate_mcts_games.py  generate_zobrist.py  human_vs_random_bot.py  naive_bot_vs_naive_bot.py  random_bot_vs_random_bot.py
src/utils/: board_utils.py
tests/: test_GameState.py  test_GoString.py  test_board.py  test_board_utils.py  test_gobot.py  test_gotypes.py
tests/dlgo/: test_GameState.py  test_GoString.py  test_Move.py  test_board.py  test_gotypes.py  test_scoring.py  test_utils.py
tests/dlgo/agent/: test_base.py  test_helpers.py  test_mcts_agent.py  test_mcts_node.py  test_random_bot.py
tests/dlgo/encoders/: test_base.py  test_oneplane.py
tests/dlgo/gosgf/: test_sgf_game.py  test_sgf_grammar.py  test_sgf_properties.py
tests/utils/: test_board_utils.py
