[tool.poetry]
name = "mydlgo"
version = "0.1.0"
description = "My code implementation for the Deep Learning and The Game of Go book."
authors = ["Paco"]
readme = "README.md"
packages = [
    { include = "dlgo", from = "src" },
    { include = "scripts", from = "src" },
    { include = "utils", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
# Add your production dependencies here
pillow = "^10.4.0"
pytest-cov = "^5.0.0"
pytest="^8.3.2"

[tool.poetry.scripts]
app = "dlgo.dlgo:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --import-mode=importlib"
testpaths = [
    "tests",
]

# Remove the pythonpath option from here

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
