[tool.poetry]
name = "mydlgo"
version = "0.1.0"
description = "My code implementation for the Deep Learning and The Game of Go book."
authors = ["Paco"]
readme = "README.md"
packages = [
    { include = "dlgo", from = "src" },
    { include = "scripts", from = "src" },
    { include = "misc", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
# Add your production dependencies here
pillow = "^10.4.0"
pytest-cov = "^5.0.0"
pytest="^8.3.2"
numpy = "^1.9.0"

keras = "^3.5.0"
tensorflow = "^2.16.2"
torch = "^2.4.0"
torchvision = "^0.19.0"
pre-commit = "^3.8.0"
# Install tensorflow-metal and tensorflow-macos on macOS
tensorflow-metal = { version = "1.1.0", markers = "sys_platform == 'darwin'" }
tensorflow-macos = { version = "2.16.2", markers = "sys_platform == 'darwin'" }
psutil = "^6.0.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.34"

[tool.poetry.scripts]
app = "dlgo.dlgo:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --import-mode=importlib"
testpaths = [
    "tests",
]

# Remove the pythonpath option from here

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
